Smoke Start 0.5.7 release

--- a/css/smoke/menu_art.css
+++ b/css/smoke/menu_art.css
@@ -4,11 +4,10 @@
 
 }
 .menu-art{
-   /* margin:0 auto;*/
-       background: rgb(201,201,201);
-        background: linear-gradient(to bottom,  rgba(201,201,201,1) 0%,rgba(246,246,246,1) 2%,rgba(196,197,199,1) 98%,rgba(117,117,119,1) 100%);
-  /* overflow: hidden;*/
+    background: rgb(201,201,201);
+    background: linear-gradient(to bottom,  rgba(201,201,201,1) 0%,rgba(246,246,246,1) 2%,rgba(196,197,199,1) 98%,rgba(117,117,119,1) 100%);
 }
+
 
 .menu-art ul,.menu-art ol{
     list-style: none;
@@ -17,35 +16,24 @@
 .menu-art > ul{
     display: flex;
     justify-content:space-between;
-    align-items: stretch;/**/
+    align-items: stretch;
 }
 
-.menu-art > ul li{
-    position: relative;
-    /*border-right: 1px solid #c7c8ca;*/
-}
-/*.menu-art > ul li:first-child{
-    border-left: 1px solid #b2b3b5;
-}
-.menu-art > ul li:last-child{
-    border-right: 1px solid #babbbd;
-}*/
-.menu-art > ul li a{
+.menu-art>ul li{position:relative}
 
-    display: block;
-    background: rgb(201,201,201);
-    background: linear-gradient(to bottom,  rgba(201,201,201,1) 0%,rgba(246,246,246,1) 2%,rgba(196,197,199,1) 98%,rgba(117,117,119,1) 100%);
+.menu-art>ul li a{display:block;
 
-    padding: 15px 82px 15px 85px;/*настройки ширины меню*/
-    font-size: 14px;
-    color: #454547;
-    text-decoration: none;
+padding:15px 82px 15px 85px;
+    font-size:14px;
+    color:#454547;
+    text-decoration:none;
     text-transform:uppercase;
-    transition: all 0.3s ease;
+    transition:all .3s ease;
 }
+
 @media screen and (min-width:1223px) and (max-width:1250px){
-    .menu-art > ul li:first-child a{
-        padding: 15px 75px ;
+    .menu-art>ul li:first-child a{
+        padding:15px 75px;
     }
 }
 
