--- a/css/smoke/common.css
+++ b/css/smoke/common.css
@@ -4,15 +4,11 @@ h1{font-size:35px}
 h2{font-size:30px}
 h3{font-size:25px}
 h4{font-size:20px}
-.colorhed,.menu_title{
-    font:25px "Monotype Corsiva";
-}
+
 p,ol,ul,ul li{margin:10px}
 ul{list-style:none}
 
-p{
-    line-height:180%;
-}
+p{line-height:180%}
 
 .fon,.fon_c{margin:0 0 7px}
 @media screen and (max-width: 920px){.fon,.fon_c{margin:0 0 7px}}
@@ -26,14 +22,11 @@ p{
     content:'✔ ';
 }
 .item:hover .check{
-    color: red;
+    color:red
 }
 .item li:hover .check{
-    color:#9BEFF3;
+    color:#9BEFF3
 }
-
-
-
 .nav_link a{margin:0 3px;display:inline-block}
 @media screen and (min-width:40px) and (max-width:780px){.nav_link a{margin:25px 24px}}
 
