Smoke Start 0.5.9 landing

--- a/css/smoke/color.css
+++ b/css/smoke/color.css
@@ -8,6 +8,8 @@ A:hover,.link:hover{color:#B2251F;text-decoration:blink}
 body{background-color:#EFEFEF}
 .header,#headcontact{background-color:#4D5055}
 
+.land_fon_c{background-color:#FBEEDB}
+
 .grey{color:#969696;opacity:1;animation:teltext 2.2s infinite;}
 
 @keyframes teltext{0%{color:#969696;}40%{color:#fffff0;}100%{color:#969696;}}
