Smoke Start 0.6.3 landing 0.5

--- a/css/smoke/frame.css
+++ b/css/smoke/frame.css
@@ -5,7 +5,8 @@ html,body{height:100%;
 }
 .maxw{
 	margin:0 auto;
-	max-width:1240px
+	max-width:1240px;
+	overflow:hidden;
 }
 /*++++++++++++++++++++++++++++++++*/
 .header{min-height:110px;}
