--- a/css/smoke/dws_pic.css
+++ b/css/smoke/dws_pic.css
@@ -1,7 +1,7 @@
 .dws-wrapper{text-align:center;
  margin:20px auto;
  position:relative;
- border:solid 2px rgba(255, 255, 255, 0.8);
+ border:solid 2px rgba(255,255,255,.8);
  background:linear-gradient(20deg,#7a7a7a,#4D5055);
  overflow:hidden}
 
@@ -12,23 +12,23 @@
 }
 
 .dws-wrapper a img{
- max-height: 400px;
- width: 100%
+ max-height:400px;
+ width:100%
 }
 
 .dws-text{
- text-align: center;
- position: absolute;
- top: 0;
- left: 0;
- right: 0;
- padding: 160px 20px 40px;
- opacity: 0;
- z-index: 100;
- transition: .6s ease;
+ text-align:center;
+ position:absolute;
+ top:0;
+ left:0;
+ right:0;
+ padding:160px 20px 40px;
+ opacity:0;
+ z-index:100;
+ transition:.6s ease;
 }
-.dws-text h3{font-size: 25px;color: #fff;}
-.dws-text p{font-size: 14px;color: #fff;}
+.dws-text h3{font-size:25px;color:#fff;}
+.dws-text p{font-size:14px;color:#fff;}
 .dws-wrapper:hover .dws-text{opacity:1;}
 
 .dws-wrapper a:before,.dws-wrapper a:after{
