--- a/www.smoke.my/lp.css
+++ b/www.smoke.my/lp.css
@@ -1,12 +1,13 @@
 html,body{height:100%;
     font:15px Verdana,Geneva,serif;
     text-align:justify;
-    cursor:default
+    cursor:default;
+    box-sizing:border-box;
 }
 .maxw{
     margin:0 auto;
     max-width:1240px;
-    overflow:hidden;
+
 }
 /*++++++++++++++++++++++++++++++++*/
 
@@ -34,46 +35,8 @@ body{
 .first_d>div{
     height:165px;
     background:linear-gradient(rgba(0,0,0,.9) 0,rgba(0,0,0,.7) 35%,rgba(0,0,0,.3) 70%,transparent 100%);
+    padding-top:25px;
 }
 
-.dexter_menu{
- color: #ffffdd;
-}
-
-.dexter_menu [type="checkbox"]{
-   display: none;
-}
-
-.dexter_menu label.toggleMenu span{
-    display:block;
-    background-color:#ffffdd;
-    width:33px;
-    height:4px;
-    margin:9px 0;
-}
-
-.dexter_menu input.toggleMenu:checked span{
-    display:none;
-    background-color:#ffffdd;
-    width:33px;
-    height:4px;
-    margin:9px 0;
-}
-
-.dexter_menu input.toggleMenu:checked .dexter_menu_span_c{
-/*    opacity:0;
-    display:none;*/
-    background-color: #00BC52;
-}
-
-/*.dexter_menu [type="checkbox"]:checked ~ ul{
-    display: none;
-}*/
 
 
-.dexter_menu input.toggleMenu:checked ~ ul{
-    display: none;
-    position: relative;
-    max-height: 5000px;
-    transition: max-height 2s ease-in;
-}
