--- a/www.smoke.my/dexter_menu_lite.css
+++ b/www.smoke.my/dexter_menu_lite.css
@@ -6,7 +6,16 @@
     height: 40px;
     font-family: 'Arial';
 }
+@media screen and (max-width:800px){
+    .dexter_menu{
+        width: 100%;
+        position:fixed;
+        top:0;
+        left: 0;
 
+    }
+
+}
 /********************/
 #dexter_menu_check{
     display: none;
@@ -16,11 +25,11 @@
     display: block;
     position: absolute;
     top: 0;
-    right: 0;
+    left: 0;
     /*width: 100%;*/
     height: 100%;
     cursor: pointer;
-    z-index: 2;
+    z-index: 12;
     line-height: 40px;
 }
 
@@ -83,7 +92,7 @@
 
     #dexter_menu_check:checked ~ .dexter-main-menu-top{
         padding-top:13px;
-        width:800px;
+        width:325px;
         display: block;
     }
     #dexter_menu_check:checked ~ .dexter-main-menu{
