Smoke Start 0.6.8 landing 1.0 Optstore

--- a/www.smoke.my/lp.css
+++ b/www.smoke.my/lp.css
@@ -7,7 +7,7 @@ html,body{height:100%;
 .maxw{
     margin:0 auto;
     max-width:1240px;
-    overflow-y:hidden;
+    /*overflow-x:hidden;*/
 
 }
 /*++++++++++++++++++++++++++++++++*/
