--- a/www.smoke.my/dexter_menu_lite.css
+++ b/www.smoke.my/dexter_menu_lite.css
@@ -35,6 +35,8 @@
     cursor:pointer;
     line-height: 40px;
     z-index:2;
+
+    /*background-color: #00BC52;*/
 }
 
 /********************/
@@ -69,7 +71,10 @@
 #dexter_menu_check:checked~.third{transform:rotate(-45deg)}
 /********* сами пункты меню***********/
 
+#dexter_menu_check ~ .dexter-main-menu{
 
+    /*opacity:0;*/
+}
 
 
 
@@ -102,12 +107,48 @@
         background-color:rgba(20,20,20,.8);
         padding-top:13px;
         width:100%;
-        display: block;
-        height: 100%;
+        display:block;
+        height:100%;
     }
     #dexter_menu_check:checked ~ .dexter-main-menu{
         max-height:600px;
         font-size:16px;
         width:100%;
+        opacity:1;
+    }
+}
+
+@media screen and (min-width:814px){
+
+    .dexter_menu{
+        /*background-color: #004e6f;*/
+        width:800px;
+    }
+
+    .dexter_menu .dexter-main-menu-top{/*див  с надписью menu*/
+        background-color:#000;
+        width:0;
+        float:left;
+    }
+
+    #dexter_menu_check ~ .dexter-main-menu a{
+        color:#ffffdd;
+        padding-top:12px;
+        float:left;
+        display:none;
+        width: 120px;
+        height: 25px;
+       /* opacity:0;*/
+    }
+    #dexter_menu_check:checked ~ .dexter-main-menu a{
+        display: block;
+    }
+
+
+    #dexter_menu_check:checked ~ .dexter-main-menu{
+        max-height:600px;
+        font-size:16px;
+        width:100%;
+        opacity:1;
     }
 }
