--- a/www.smoke.my/lp.css
+++ b/www.smoke.my/lp.css
@@ -33,6 +33,9 @@ body{
     /*background-color:#8E8B8B;*/
     min-height: 900px;
 }
+
+
+
 .first_d>div{
     height:165px;
     background:linear-gradient(rgba(0,0,0,.9) 0,rgba(0,0,0,.7) 35%,rgba(0,0,0,.3) 70%,transparent 100%);
@@ -63,5 +66,30 @@ body{
     #logo img{width:70%}
 }
 
+.first_d h3{
+    font-size:180%;
+    color: #ffffdd;
+    text-align: center;
+    margin:25px;
+}
+
+.top_content img{
+    margin:35px 0 0;
+}
 
 
+.first_d p{
+    color: #ffffdd;
+    margin: 10px;
+    line-height: 180%;
+    letter-spacing:3px;
+    font-size:120%;
+}
+
+#top_call_back_btn{
+    background-color: #00BC52;
+    width:25%;
+    height:70px;
+    display:block;
+    margin:15px auto;
+}
