--- a/www.smoke.my/lp.css
+++ b/www.smoke.my/lp.css
@@ -10,12 +10,20 @@ html,body{height:100%;
     /*overflow-x:hidden;*/
 
 }
-/*++++++++++++++++++++++++++++++++*/
+p,ol,ul,ul li{margin:10px}
+ul{list-style:none}
+p{line-height:180%}
 
-body{
-
+.check::before{
+    content:'✔ ';
 }
-
+.item:hover .check{
+    color:red
+}
+.item li:hover .check{
+    color:#9BEFF3
+}
+/*++++++++++++++++++++++++++++++++*/
 .min_h{
     min-height:100px;
 }
@@ -34,50 +42,30 @@ body{
     padding:45px 0 150px;
 }
 @media screen and (max-width:790px){
-    .first_d{
-        padding:40px 0;
-    }
+    .first_d{padding:40px 0}
 }
-
 #logo{
     margin:0 0 0 7%;
     float:left;
     width:15%;
     text-align: center;
 }
-@media screen and (min-width:1100px) and (max-width:1240px){
-    #logo{width:14%;}
-}
-@media screen and (min-width:1000px) and (max-width:1099px){
-    #logo{width:15%}
-}
-@media screen and (min-width:900px) and (max-width:999px){
-    #logo{width:16%}
-}
-@media screen and (min-width:740px) and (max-width:899px){
-    #logo{width:17%}
-}@media screen and (min-width:541px) and (max-width:739px){
-    #logo{width:19%}
-}
-@media screen and (max-width:540px){
-    #logo,.h_field{width:100%;margin:0}
-    #logo img{width:70%}
-}
+@media screen and (min-width:1100px) and (max-width:1240px){#logo{width:14%;}}
+@media screen and (min-width:1000px) and (max-width:1099px){#logo{width:15%}}
+@media screen and (min-width:900px) and (max-width:999px){#logo{width:16%}}
+@media screen and (min-width:740px) and (max-width:899px){#logo{width:17%}}
+@media screen and (min-width:541px) and (max-width:739px){#logo{width:19%}}
+@media screen and (max-width:540px){#logo,.h_field{width:100%;margin:0}#logo img{width:70%}}
 
 #d_fon_top_img{
     float:left;
-    width:48%;
+    width:48%
 }
 #d_fon_top_r{
     float:right;
     width:48%
 }
-@media screen and (max-width:790px){
-    #d_fon_top_img,#d_fon_top_r{
-        float:none;
-        width:100%
-    }
-}
+@media screen and (max-width:790px){#d_fon_top_img,#d_fon_top_r{float:none;width:100%}}
 
 
 .first_d h3{
