--- a/www.ok.my/common.css
+++ b/www.ok.my/common.css
@@ -7,6 +7,7 @@ h4{font-size:20px}
 p,ol,ul,ul li{margin:5px}
 ul{list-style:none}
 
+*{box-sizing:border-box}
 
 .fon,.fon_c{margin:0 0 7px}
 @media screen and (max-width: 920px){.fon,.fon_c{margin:0 0 7px}}
