--- a/www.ok.my/frame.css
+++ b/www.ok.my/frame.css
@@ -34,7 +34,8 @@ html,body{height:100%;
 
 #logo{
 	float:left;
-	width:13%;
+	/*width:13%;*/
+	width:170px;
 	text-align: center;
 	height:90px;
 }
