--- a/www.ok.my/frame.css
+++ b/www.ok.my/frame.css
@@ -36,7 +36,7 @@ html,body{height:100%;
 	position: relative;
 	float:left;
 	/*width:13%;*/
-	width:170px;
+	width:370px;
 	text-align: center;
 	height:90px;
 
@@ -66,7 +66,8 @@ html,body{height:100%;
 #logo_vint_out{
 	position:relative;
 	margin:5px;
-	width:80px;
+	/*width:80px;*/
+	width:132px;
 	height:80px;
 
 
@@ -91,6 +92,17 @@ html,body{height:100%;
 	to {
 		transform: rotate(360deg);
 	}
+}
+
+#logo_vint_k{
+	margin:0px 5px 5px 0;
+	font-size:500%;
+	color: #fff;
+
+
+	background-color: #6B3708;
+
+
 }
 
 
