Smoke Start 0.6.8 landing 1.0 win lng 0.1

--- a/www.ok.my/frame.css
+++ b/www.ok.my/frame.css
@@ -35,8 +35,8 @@ html,body{height:100%;
 #logo{
 	position: relative;
 	float:left;
-	/*width:13%;*/
-	width:370px;
+	width:13%;
+	/*width:370px;*/
 	text-align: center;
 	height:90px;
 
