--- a/www.burger.my/frame.css
+++ b/www.burger.my/frame.css
@@ -15,10 +15,26 @@ body{background:#000 url("../img/site/dbpic.php?i=bg")fixed repeat;}
 }
 
 #bh{
-	min-height:50px;
-	/*padding:5px 27px 9px;*/
-	background-color: #9BEFF3;
-}	
+	height:50px;
+	/*padding:15px 2px 1px;*/
+	background-color: #373737;
+	font:16px Times, Times New Roman, serif;
+}
+#bflocation{
+	height:50px;
+	width:150px;
+	overflow: hidden; /* всё, что выходит за рамки блока обрезается */
+	white-space: nowrap; /* блок может содержать не более одной строки */
+	text-align: center;
+	/*height: 7em;   не в % */
+	line-height:3em; /* не поддерживается Opera Mini [opera.com] */
+	background-color:#2c536c;
+}
+.location:before{
+
+}
+
+
 /*
 #header{
 	min-height:70px
