--- a/www.burger.my/frame.css
+++ b/www.burger.my/frame.css
@@ -53,14 +53,15 @@ body{background:#000 url("../img/site/dbpic.php?i=bg")fixed repeat;}
 	line-height:3em;
 }
 #bfmenu a{
-	display: block;
-	width: 75px;
+	display:inline;
+	margin:0 12px;
+	width:75px;
+	text-decoration:none;
 }
 
-#bfmenu a:hover{background-color:#f78f07}
-
+#bfmenu a:hover{color:#AA0500;text-decoration:#00BC52;text-decoration:underline}
 #bfmenu a:link{color:#ffffdd}
-#bfmenu a:visited{color:#fffff0}
+#bfmenu a:visited{color:#ffffdd}
 
 /*
 #header{
