--- a/www.burger.my/frame.css
+++ b/www.burger.my/frame.css
@@ -98,9 +98,15 @@ body{background:#000 url("../img/site/dbpic.php?i=bg")fixed repeat;}
 }
 #header,#headerback{
 	min-height:70px;
-	background-color:#373737;
+
 }
-#header{z-index:100;position:relative}
+#header{
+	z-index:100;
+	position:relative;
+	background-color:#111;
+	background-color:rgba(17,17,17,.94);
+	background-color:#ff1;
+}
 
 
 
