--- a/www.burger.my/frame.css
+++ b/www.burger.my/frame.css
@@ -110,20 +110,20 @@ body{background:#000 url("../img/site/dbpic.php?i=bg")fixed repeat;}
 }
 
 	#logo{
-		float: left;
+		position:relative;
+		float:left;
 		padding:0 40px;
 		width:140px;
 		overflow:hidden;
-		background-color: #01c1c1;
+		/*background-color: #01c1c1;*/
 	}
 
 	#burgermenu{
 		box-sizing:border-box;
-		float: left;
 		height:110px;
 		min-width:240px;
-		max-width:1010px;
-		background-color: #9BEFF3;
+		max-width:1240px;
+		/*background-color: #9BEFF3;*/
 	}
 
 
