--- a/www.burger.my/burger_r.css
+++ b/www.burger.my/burger_r.css
@@ -6,7 +6,7 @@
     right:0;
     height:40px;
     width:40px;
-    background-color:#F2BD3B;
+    /*background-color:#F2BD3B;*/
 }
 .burger_line{
     height:3px;
@@ -15,23 +15,24 @@
     left:0;
     background-color:#ffffdd;
     border-radius:2px;
+    transition:.1s;
 }
 .burger>div:nth-child(1){top:9px}
 .burger>div:nth-child(2){top:18px}
 .burger>div:nth-child(3){top:27px}
 .burger:hover .burger_line{background-color:rgba(255,255,255,.7)}
 
-.burger:active>div:first-child{
+/*.burger:active>div:first-child{
     transform:rotate(45deg);
     position:absolute;
     top:18px;
-    background-color: #00afea;
+    background-color:#ffffdd;
 
 }
 .burger:active>div:last-child{
     transform:rotate(-45deg);
     position:absolute;
     top:18px;
-    background-color: #00BC52;
-}
-.burger:active>div:nth-child(2){display:none}
+    background-color:#ffffdd;
+}*/
+/*.burger:active>div:nth-child(2){display:none}*/
