--- a/www.burger.my/burger_r.css
+++ b/www.burger.my/burger_r.css
@@ -8,7 +8,7 @@
     width:40px;
     /*background-color:#F2BD3B;*/
 }
-@media screen and (max-width:801px){
+@media screen and (max-width:800px){
     .burger{display:block;}
 }
 .burger_line{
@@ -46,7 +46,7 @@
     width: 100%;
     padding-top:30px;
 }
-@media screen and (max-width:801px){#burger_pc{display:none}}
+@media screen and (max-width:800px){#burger_pc{display:none}}
 #burger_pc ul{
     /*background-color:#1a394f;*/
 }
@@ -64,10 +64,20 @@
     width:120px;
     text-align: center;
     color:#ffffdd;
-    background-color: #9BEFF3;
     margin:3px;
     padding:6px 4px;
 }
 
+#burger_pc a:visited{color:#ffffdd}/*!!!!:visited, а затем идёт :hover*/
+#burger_pc a:hover{color:#FF0000}
 
-
+/****************************************************/
+/****************************************************/
+/****************************************************/
+#burger_mob{
+    position:fixed;
+    left:0;
+    top:0;
+    background-color:#FC761E;
+    z-index:120;
+}
