--- a/www.burger.my/burger_r.css
+++ b/www.burger.my/burger_r.css
@@ -6,6 +6,7 @@
     right:0;
     height:40px;
     width:40px;
+    z-index:5;
     /*background-color:#F2BD3B;*/
 }
 @media screen and (max-width:800px){
@@ -77,7 +78,8 @@
 #burger_mob{
     position:fixed;
     left:0;
-    top:0;
+    right:0;
+    top:50px;
     background-color:#FC761E;
     z-index:120;
 }
