--- a/www.burger.my/burger_r.css
+++ b/www.burger.my/burger_r.css
@@ -2,7 +2,7 @@
     display:none;
     cursor:pointer;
     position:absolute;
-    top:15px;
+    top:5px;
     right:0;
     height:40px;
     width:40px;
@@ -76,11 +76,22 @@
 /****************************************************/
 /****************************************************/
 #burger_mob{
-    position:fixed;
+    /*position:fixed;
     left:0;
     right:0;
-    top:50px;
-    background-color:#FC761E;
+    top:50px;*/
+    position:absolute;
+    top:5px;
+    right:0;
+    height:40px;
+    width:40px;
+
+    overflow:hidden;
+
+
+    background-color:rgba(10,10,10,.94);
+    /*background-color: #72b572;*/
+
     z-index:120;
 }
 .burger_mob{
@@ -88,19 +99,24 @@
     height:80%;
     min-width:150px;
     max-width:250px;
-    background-color: #9BEFF3;
-
+    /*background-color:#9BEFF3;*/
 }
 .burger_mob li{
     display:block;
     text-align:center;
-    padding:13px;
-
-    background-color: #00afea;
+    padding:15px 13px;
+    /*background-color: #00afea;*/
 }
 .burger_mob a{
     display:block;
+    text-decoration:none;
+    color: #ffffdd;
+    font-size: 140%;
+    font-weight:600;
   /*  margin: 13px;*/
-    background-color: #ffffdd;
-
 }
+.burger_mob a:visited{color:#ffffdd}
+.burger_mob a:hover{color:#FF0000}
+
+
+
