--- a/www.burger.my/frame.css
+++ b/www.burger.my/frame.css
@@ -105,7 +105,7 @@ body{background:#000 url("../img/site/dbpic.php?i=bg")fixed repeat;}
 	z-index:2;
 	position:relative;
 	background-color:#111;
-	background-color:rgba(17,17,17,.94);
+	background-color:rgba(17,17,17,.85);
 	/*background-color:#ff1;*/
 	height:110px;
 }
@@ -191,15 +191,16 @@ body{background:#000 url("../img/site/dbpic.php?i=bg")fixed repeat;}
 /*  m_col_child End */
 /**************************/
 /**************************/
-/*
+
 #bf{min-height:5px}
 
 #foot{
-	min-height:40px;border-radius:5px
+	min-height:50px;
+	background-color:rgba(17,17,17,.85);
 }
 
 #copy{font-size:70%}
-
+/*
 
 @media screen and (min-width:1281px) and (max-width:3000px){
     .maxw{max-width:1500px;}
