--- a/www.burger.my/tile.css
+++ b/www.burger.my/tile.css
@@ -1,4 +1,9 @@
+#tile{
+    padding: 30px 0;
+}
+
 .unit{
+    margin: 25px;
     position: relative;
     height:400px;
     width:350px;
@@ -6,7 +11,7 @@
     text-align: center;
 
     background-color:rgba(17,17,17,.55);
-    background-color: #9BEFF3;
+    /*background-color: #9BEFF3;*/
 }
 
 .unit_img{
@@ -37,26 +42,52 @@
     padding:13px 0;
     font-size:140%;
     font-weight: bold;
-    background-color: #9B12F3;
+ /*   background-color: #9B12F3;*/
 }
-.unit_ves{
-    position:absolute;
+/*Для бургера*/
+.unit_kind_bur{
+    text-align:center;
+    position: absolute;
     right:0;
-    bottom:105px;
+    top:50%;
     width:80px;
     height:25px;
-
+    font-weight:600;
+    font-size:120%;
+}
+/*Для пиццы*/
+.unit_kind{
+    position:absolute;
+    right:0;
+    top:0;
+    /*bottom:105px;*/
+    width:50px;
+    height:230px;
     font-weight:600;
     /*background:rgba(0,0,0,.01) url("../img/tile/hit.png") no-repeat;*/
-    background-color: #00afea;
+    /* background-color: #00afea;*/
     z-index:2;
 }
+.unit_kind_pizza{
+    margin:15px auto;
+    border:#F2BD3B 1px solid;
+    width:38px;
+    height:38px;
+    border-radius:50%;
+    box-sizing:border-box;
+    text-align:center;
+    line-height:2.25em;
+    cursor: pointer;
+}
+.unit_kind_pizza_select,.unit_kind_pizza:hover{
+    border-width:3px;
+}
 .unit_hint{
-    background-color:#cc77cc;
+    /*background-color:#cc77cc;*/
     padding:4px;
 }
 .unit_price{
-    background-color: #00BC52;
+    /*background-color: #00BC52;*/
     position: absolute;
     right: 0;
     bottom:10px;
