--- a/www.burger.my/tile.css
+++ b/www.burger.my/tile.css
@@ -35,7 +35,7 @@
     top:-1px;
     width:150px;
     height:150px;
-    background:rgba(0,0,0,.01) url("../img/tile/hit.png") no-repeat;
+    background:rgba(0,0,0,.01) url("../img/tile/dbpic.php?i=hit&ep=1") no-repeat;
     z-index:2;
 
 }
