--- a/www.burger.my/frame.css
+++ b/www.burger.my/frame.css
@@ -138,7 +138,7 @@ body{background:#000 url("../img/site/dbpic.php?i=bg")fixed repeat;}
 		/*background-color: #9BEFF3;*/
 	}
 
-#burger_part,#pizza_part{
+#burger-section,#pizza-section,#nuggets-section,#beverages-section{
 	padding:60px 50px 50px;
 }
 
