--- a/www.burger.my/tile.css
+++ b/www.burger.my/tile.css
@@ -21,7 +21,7 @@
     min-width:250px;
     max-width:300px;
     margin: 5px auto;
-    overflow: hidden;
+    /*overflow: hidden;*/
 
    /* background-color: #fff56d;*/
 }
