--- a/www.burger.my/tile.css
+++ b/www.burger.my/tile.css
@@ -7,22 +7,19 @@
     position: relative;
     height:400px;
     width:350px;
-    border-radius:7px;
-
+    border-radius:17px;
     text-align: center;
-
-    background-color:rgba(17,17,17,.55);
+    background-color:rgba(17,17,17,.75);
     /*background-color: #9BEFF3;*/
 }
 
 .unit_img{
-
-    height:230px;
+    height:250px;
     min-width:250px;
     max-width:300px;
     margin: 5px auto;
-    /*overflow: hidden;*/
-
+    border-radius:7px;
+    overflow-y: hidden;
    /* background-color: #fff56d;*/
 }
 .unit_img img{
@@ -49,8 +46,8 @@
 .unit_kind_bur{
     text-align:center;
     position: absolute;
-    right:0;
-    top:50%;
+    right:13px;
+    top:53%;
     width:80px;
     height:25px;
     font-weight:600;
