--- a/www.burger.my/tile.css
+++ b/www.burger.my/tile.css
@@ -62,13 +62,12 @@
     width:50px;
     height:230px;
     font-weight:600;
-    /*background:rgba(0,0,0,.01) url("../img/tile/hit.png") no-repeat;*/
-    /* background-color: #00afea;*/
     z-index:2;
 }
 .unit_kind_pizza{
     margin:15px auto;
     border:#F2BD3B 1px solid;
+    background-color:rgba(17,17,17,.95);
     width:38px;
     height:38px;
     border-radius:50%;
